fixed page scrolling pic overlap issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -89,7 +89,7 @@ body{
 
 .service-information{
 	background-color: lightgrey;
-	height: 800px;
+	/*height: 800px;*/
 	width: 100%;
 	margin-top: 345px;
 	position: absolute;
